// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Slider> renders 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <RCTScrollView
    horizontal={true}
    scrollEventThrottle={16}
  >
    <View />
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {caption} 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "marginBottom": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      small={true}
      style={
        Array [
          Object {
            "color": "#4a4a4a",
            "fontFamily": undefined,
            "fontWeight": "400",
            "textAlignVertical": "center",
          },
          Object {
            "fontSize": 16,
            "lineHeight": 30,
          },
          false,
          Object {
            "color": "#9b9b9b",
          },
        ]
      }
    >
      Hello World
    </Text>
  </View>
  <RCTScrollView
    horizontal={true}
    scrollEventThrottle={16}
  >
    <View />
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {dataSource} 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <RCTScrollView
    horizontal={true}
    scrollEventThrottle={16}
  >
    <View>
      <View
        style={
          Object {
            "marginRight": 10,
          }
        }
      >
        <View
          accessible={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#e0e0e0",
                },
                Object {
                  "borderRadius": 3,
                },
                Object {
                  "width": 168,
                },
                undefined,
                undefined,
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignContent": "center",
                    "alignItems": "center",
                    "backgroundColor": "#F5F5F6",
                    "justifyContent": "center",
                  },
                  Array [
                    Object {
                      "borderRadius": 3,
                    },
                    Object {
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ],
                ]
              }
            >
              <Image
                onLoad={[Function]}
                resizeMode="cover"
                source={
                  Object {
                    "uri": "https://picsum.photos/320/200?image=11",
                  }
                }
                style={
                  Array [
                    Object {
                      "borderRadius": 3,
                    },
                    Object {
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ]
                }
              />
              <ActivityIndicator
                animating={true}
                color="white"
                hidesWhenStopped={true}
                size="large"
                style={
                  Array [
                    Object {
                      "position": "absolute",
                    },
                    false,
                  ]
                }
              />
            </View>
            <View
              pointerEvents="none"
              style={
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "alignSelf": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "left": 0,
                  "padding": 10,
                  "position": "absolute",
                  "width": "100%",
                }
              }
            >
              <View>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#4a4a4a",
                        "fontFamily": undefined,
                        "fontWeight": "400",
                        "textAlignVertical": "center",
                      },
                      Object {
                        "fontFamily": undefined,
                        "fontSize": 32,
                        "fontWeight": "700",
                        "letterSpacing": -2,
                        "lineHeight": 34,
                      },
                      false,
                      Object {
                        "color": "#ffffff",
                        "textAlign": "center",
                      },
                    ]
                  }
                >
                  Title 0
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 3,
                  "bottom": 0,
                  "left": 0,
                  "overflow": "hidden",
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#ffffff",
                  "height": 0,
                  "opacity": 0,
                  "width": 0,
                  "zIndex": 0,
                }
              }
            />
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "marginRight": 10,
          }
        }
      >
        <View
          accessible={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#e0e0e0",
                },
                Object {
                  "borderRadius": 3,
                },
                Object {
                  "width": 168,
                },
                undefined,
                undefined,
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignContent": "center",
                    "alignItems": "center",
                    "backgroundColor": "#F5F5F6",
                    "justifyContent": "center",
                  },
                  Array [
                    Object {
                      "borderRadius": 3,
                    },
                    Object {
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ],
                ]
              }
            >
              <Image
                onLoad={[Function]}
                resizeMode="cover"
                source={
                  Object {
                    "uri": "https://picsum.photos/320/200?image=12",
                  }
                }
                style={
                  Array [
                    Object {
                      "borderRadius": 3,
                    },
                    Object {
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ]
                }
              />
              <ActivityIndicator
                animating={true}
                color="white"
                hidesWhenStopped={true}
                size="large"
                style={
                  Array [
                    Object {
                      "position": "absolute",
                    },
                    false,
                  ]
                }
              />
            </View>
            <View
              pointerEvents="none"
              style={
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "alignSelf": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "left": 0,
                  "padding": 10,
                  "position": "absolute",
                  "width": "100%",
                }
              }
            >
              <View>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#4a4a4a",
                        "fontFamily": undefined,
                        "fontWeight": "400",
                        "textAlignVertical": "center",
                      },
                      Object {
                        "fontFamily": undefined,
                        "fontSize": 32,
                        "fontWeight": "700",
                        "letterSpacing": -2,
                        "lineHeight": 34,
                      },
                      false,
                      Object {
                        "color": "#ffffff",
                        "textAlign": "center",
                      },
                    ]
                  }
                >
                  Title 1
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 3,
                  "bottom": 0,
                  "left": 0,
                  "overflow": "hidden",
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#ffffff",
                  "height": 0,
                  "opacity": 0,
                  "width": 0,
                  "zIndex": 0,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {itemMargin} 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <RCTScrollView
    horizontal={true}
    scrollEventThrottle={16}
  >
    <View>
      <View
        style={
          Object {
            "marginRight": 16,
          }
        }
      >
        <View
          accessible={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#e0e0e0",
                },
                Object {
                  "borderRadius": 3,
                },
                Object {
                  "width": 168,
                },
                undefined,
                undefined,
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignContent": "center",
                    "alignItems": "center",
                    "backgroundColor": "#F5F5F6",
                    "justifyContent": "center",
                  },
                  Array [
                    Object {
                      "borderRadius": 3,
                    },
                    Object {
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ],
                ]
              }
            >
              <Image
                onLoad={[Function]}
                resizeMode="cover"
                source={
                  Object {
                    "uri": "https://picsum.photos/320/200?image=11",
                  }
                }
                style={
                  Array [
                    Object {
                      "borderRadius": 3,
                    },
                    Object {
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ]
                }
              />
              <ActivityIndicator
                animating={true}
                color="white"
                hidesWhenStopped={true}
                size="large"
                style={
                  Array [
                    Object {
                      "position": "absolute",
                    },
                    false,
                  ]
                }
              />
            </View>
            <View
              pointerEvents="none"
              style={
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "alignSelf": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "left": 0,
                  "padding": 10,
                  "position": "absolute",
                  "width": "100%",
                }
              }
            >
              <View>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#4a4a4a",
                        "fontFamily": undefined,
                        "fontWeight": "400",
                        "textAlignVertical": "center",
                      },
                      Object {
                        "fontFamily": undefined,
                        "fontSize": 32,
                        "fontWeight": "700",
                        "letterSpacing": -2,
                        "lineHeight": 34,
                      },
                      false,
                      Object {
                        "color": "#ffffff",
                        "textAlign": "center",
                      },
                    ]
                  }
                >
                  Title 0
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 3,
                  "bottom": 0,
                  "left": 0,
                  "overflow": "hidden",
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#ffffff",
                  "height": 0,
                  "opacity": 0,
                  "width": 0,
                  "zIndex": 0,
                }
              }
            />
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "marginRight": 16,
          }
        }
      >
        <View
          accessible={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#e0e0e0",
                },
                Object {
                  "borderRadius": 3,
                },
                Object {
                  "width": 168,
                },
                undefined,
                undefined,
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignContent": "center",
                    "alignItems": "center",
                    "backgroundColor": "#F5F5F6",
                    "justifyContent": "center",
                  },
                  Array [
                    Object {
                      "borderRadius": 3,
                    },
                    Object {
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ],
                ]
              }
            >
              <Image
                onLoad={[Function]}
                resizeMode="cover"
                source={
                  Object {
                    "uri": "https://picsum.photos/320/200?image=12",
                  }
                }
                style={
                  Array [
                    Object {
                      "borderRadius": 3,
                    },
                    Object {
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ]
                }
              />
              <ActivityIndicator
                animating={true}
                color="white"
                hidesWhenStopped={true}
                size="large"
                style={
                  Array [
                    Object {
                      "position": "absolute",
                    },
                    false,
                  ]
                }
              />
            </View>
            <View
              pointerEvents="none"
              style={
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "alignSelf": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "left": 0,
                  "padding": 10,
                  "position": "absolute",
                  "width": "100%",
                }
              }
            >
              <View>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#4a4a4a",
                        "fontFamily": undefined,
                        "fontWeight": "400",
                        "textAlignVertical": "center",
                      },
                      Object {
                        "fontFamily": undefined,
                        "fontSize": 32,
                        "fontWeight": "700",
                        "letterSpacing": -2,
                        "lineHeight": 34,
                      },
                      false,
                      Object {
                        "color": "#ffffff",
                        "textAlign": "center",
                      },
                    ]
                  }
                >
                  Title 1
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 3,
                  "bottom": 0,
                  "left": 0,
                  "overflow": "hidden",
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#ffffff",
                  "height": 0,
                  "opacity": 0,
                  "width": 0,
                  "zIndex": 0,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {momentum} 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <RCTScrollView
    horizontal={true}
    onScroll={[Function]}
    scrollEventThrottle={16}
  >
    <View>
      <View
        style={
          Object {
            "marginRight": 10,
          }
        }
      >
        <View
          accessible={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#e0e0e0",
                },
                Object {
                  "borderRadius": 3,
                },
                Object {
                  "width": 168,
                },
                undefined,
                undefined,
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignContent": "center",
                    "alignItems": "center",
                    "backgroundColor": "#F5F5F6",
                    "justifyContent": "center",
                  },
                  Array [
                    Object {
                      "borderRadius": 3,
                    },
                    Object {
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ],
                ]
              }
            >
              <Image
                onLoad={[Function]}
                resizeMode="cover"
                source={
                  Object {
                    "uri": "https://picsum.photos/320/200?image=11",
                  }
                }
                style={
                  Array [
                    Object {
                      "borderRadius": 3,
                    },
                    Object {
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ]
                }
              />
              <ActivityIndicator
                animating={true}
                color="white"
                hidesWhenStopped={true}
                size="large"
                style={
                  Array [
                    Object {
                      "position": "absolute",
                    },
                    false,
                  ]
                }
              />
            </View>
            <View
              pointerEvents="none"
              style={
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "alignSelf": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "left": 0,
                  "padding": 10,
                  "position": "absolute",
                  "width": "100%",
                }
              }
            >
              <View>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#4a4a4a",
                        "fontFamily": undefined,
                        "fontWeight": "400",
                        "textAlignVertical": "center",
                      },
                      Object {
                        "fontFamily": undefined,
                        "fontSize": 32,
                        "fontWeight": "700",
                        "letterSpacing": -2,
                        "lineHeight": 34,
                      },
                      false,
                      Object {
                        "color": "#ffffff",
                        "textAlign": "center",
                      },
                    ]
                  }
                >
                  Title 0
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 3,
                  "bottom": 0,
                  "left": 0,
                  "overflow": "hidden",
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#ffffff",
                  "height": 0,
                  "opacity": 0,
                  "width": 0,
                  "zIndex": 0,
                }
              }
            />
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "marginRight": 10,
          }
        }
      >
        <View
          accessible={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#e0e0e0",
                },
                Object {
                  "borderRadius": 3,
                },
                Object {
                  "width": 168,
                },
                undefined,
                undefined,
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignContent": "center",
                    "alignItems": "center",
                    "backgroundColor": "#F5F5F6",
                    "justifyContent": "center",
                  },
                  Array [
                    Object {
                      "borderRadius": 3,
                    },
                    Object {
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ],
                ]
              }
            >
              <Image
                onLoad={[Function]}
                resizeMode="cover"
                source={
                  Object {
                    "uri": "https://picsum.photos/320/200?image=12",
                  }
                }
                style={
                  Array [
                    Object {
                      "borderRadius": 3,
                    },
                    Object {
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ]
                }
              />
              <ActivityIndicator
                animating={true}
                color="white"
                hidesWhenStopped={true}
                size="large"
                style={
                  Array [
                    Object {
                      "position": "absolute",
                    },
                    false,
                  ]
                }
              />
            </View>
            <View
              pointerEvents="none"
              style={
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "alignSelf": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "left": 0,
                  "padding": 10,
                  "position": "absolute",
                  "width": "100%",
                }
              }
            >
              <View>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#4a4a4a",
                        "fontFamily": undefined,
                        "fontWeight": "400",
                        "textAlignVertical": "center",
                      },
                      Object {
                        "fontFamily": undefined,
                        "fontSize": 32,
                        "fontWeight": "700",
                        "letterSpacing": -2,
                        "lineHeight": 34,
                      },
                      false,
                      Object {
                        "color": "#ffffff",
                        "textAlign": "center",
                      },
                    ]
                  }
                >
                  Title 1
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 3,
                  "bottom": 0,
                  "left": 0,
                  "overflow": "hidden",
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#ffffff",
                  "height": 0,
                  "opacity": 0,
                  "width": 0,
                  "zIndex": 0,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {navigation} 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "height": "100%",
          "justifyContent": "center",
          "position": "absolute",
          "zIndex": 1,
        },
        Object {
          "left": -16,
        },
      ]
    }
  >
    <View
      accessible={true}
      onLayout={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      pointerEvents="box-only"
      style={
        Array [
          Object {
            "borderRadius": 3,
          },
          false,
          undefined,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignContent": "center",
              "alignItems": "center",
              "borderRadius": 3,
              "justifyContent": "center",
            },
            Object {
              "height": 45,
              "minWidth": 45,
              "paddingHorizontal": 30,
            },
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
            },
            Object {
              "height": 30,
              "minWidth": 30,
              "paddingHorizontal": 15,
            },
            false,
            false,
            Object {
              "paddingHorizontal": 0,
            },
            Object {
              "backgroundColor": "#9b9b9b",
            },
            false,
            false,
            false,
            false,
            false,
            false,
          ]
        }
      >
        <Image
          resizeMode="contain"
          source={
            Object {
              "testUri": "../../../components/Icon/assets/left.png",
            }
          }
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "height": 20,
                "width": 20,
              },
              undefined,
              undefined,
            ]
          }
        />
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
              },
              undefined,
            ]
          }
        />
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderRadius": 3,
              "bottom": 0,
              "left": 0,
              "overflow": "hidden",
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "height": 0,
              "opacity": 0,
              "width": 0,
              "zIndex": 0,
            }
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "height": "100%",
          "justifyContent": "center",
          "position": "absolute",
          "zIndex": 1,
        },
        Object {
          "right": -16,
        },
      ]
    }
  >
    <View
      accessible={true}
      onLayout={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      pointerEvents="box-only"
      style={
        Array [
          Object {
            "borderRadius": 3,
          },
          false,
          undefined,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignContent": "center",
              "alignItems": "center",
              "borderRadius": 3,
              "justifyContent": "center",
            },
            Object {
              "height": 45,
              "minWidth": 45,
              "paddingHorizontal": 30,
            },
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
            },
            Object {
              "height": 30,
              "minWidth": 30,
              "paddingHorizontal": 15,
            },
            false,
            false,
            Object {
              "paddingHorizontal": 0,
            },
            Object {
              "backgroundColor": "#9b9b9b",
            },
            false,
            false,
            false,
            false,
            false,
            false,
          ]
        }
      >
        <Image
          resizeMode="contain"
          source={
            Object {
              "testUri": "../../../components/Icon/assets/right.png",
            }
          }
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "height": 20,
                "width": 20,
              },
              undefined,
              undefined,
            ]
          }
        />
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
              },
              undefined,
            ]
          }
        />
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderRadius": 3,
              "bottom": 0,
              "left": 0,
              "overflow": "hidden",
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "height": 0,
              "opacity": 0,
              "width": 0,
              "zIndex": 0,
            }
          }
        />
      </View>
    </View>
  </View>
  <RCTScrollView
    horizontal={true}
    scrollEventThrottle={16}
  >
    <View />
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {steps} 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <RCTScrollView
    horizontal={true}
    scrollEventThrottle={16}
  >
    <View>
      <View
        style={
          Object {
            "marginRight": 10,
          }
        }
      >
        <View
          accessible={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#e0e0e0",
                },
                Object {
                  "borderRadius": 3,
                },
                Object {
                  "width": 168,
                },
                undefined,
                undefined,
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignContent": "center",
                    "alignItems": "center",
                    "backgroundColor": "#F5F5F6",
                    "justifyContent": "center",
                  },
                  Array [
                    Object {
                      "borderRadius": 3,
                    },
                    Object {
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ],
                ]
              }
            >
              <Image
                onLoad={[Function]}
                resizeMode="cover"
                source={
                  Object {
                    "uri": "https://picsum.photos/320/200?image=11",
                  }
                }
                style={
                  Array [
                    Object {
                      "borderRadius": 3,
                    },
                    Object {
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ]
                }
              />
              <ActivityIndicator
                animating={true}
                color="white"
                hidesWhenStopped={true}
                size="large"
                style={
                  Array [
                    Object {
                      "position": "absolute",
                    },
                    false,
                  ]
                }
              />
            </View>
            <View
              pointerEvents="none"
              style={
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "alignSelf": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "left": 0,
                  "padding": 10,
                  "position": "absolute",
                  "width": "100%",
                }
              }
            >
              <View>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#4a4a4a",
                        "fontFamily": undefined,
                        "fontWeight": "400",
                        "textAlignVertical": "center",
                      },
                      Object {
                        "fontFamily": undefined,
                        "fontSize": 32,
                        "fontWeight": "700",
                        "letterSpacing": -2,
                        "lineHeight": 34,
                      },
                      false,
                      Object {
                        "color": "#ffffff",
                        "textAlign": "center",
                      },
                    ]
                  }
                >
                  Title 0
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 3,
                  "bottom": 0,
                  "left": 0,
                  "overflow": "hidden",
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#ffffff",
                  "height": 0,
                  "opacity": 0,
                  "width": 0,
                  "zIndex": 0,
                }
              }
            />
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "marginRight": 10,
          }
        }
      >
        <View
          accessible={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#e0e0e0",
                },
                Object {
                  "borderRadius": 3,
                },
                Object {
                  "width": 168,
                },
                undefined,
                undefined,
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignContent": "center",
                    "alignItems": "center",
                    "backgroundColor": "#F5F5F6",
                    "justifyContent": "center",
                  },
                  Array [
                    Object {
                      "borderRadius": 3,
                    },
                    Object {
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ],
                ]
              }
            >
              <Image
                onLoad={[Function]}
                resizeMode="cover"
                source={
                  Object {
                    "uri": "https://picsum.photos/320/200?image=12",
                  }
                }
                style={
                  Array [
                    Object {
                      "borderRadius": 3,
                    },
                    Object {
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ]
                }
              />
              <ActivityIndicator
                animating={true}
                color="white"
                hidesWhenStopped={true}
                size="large"
                style={
                  Array [
                    Object {
                      "position": "absolute",
                    },
                    false,
                  ]
                }
              />
            </View>
            <View
              pointerEvents="none"
              style={
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "alignSelf": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "left": 0,
                  "padding": 10,
                  "position": "absolute",
                  "width": "100%",
                }
              }
            >
              <View>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#4a4a4a",
                        "fontFamily": undefined,
                        "fontWeight": "400",
                        "textAlignVertical": "center",
                      },
                      Object {
                        "fontFamily": undefined,
                        "fontSize": 32,
                        "fontWeight": "700",
                        "letterSpacing": -2,
                        "lineHeight": 34,
                      },
                      false,
                      Object {
                        "color": "#ffffff",
                        "textAlign": "center",
                      },
                    ]
                  }
                >
                  Title 1
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 3,
                  "bottom": 0,
                  "left": 0,
                  "overflow": "hidden",
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#ffffff",
                  "height": 0,
                  "opacity": 0,
                  "width": 0,
                  "zIndex": 0,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {style} 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "backgroundColor": "orange",
        "padding": 20,
      }
    }
    horizontal={true}
    scrollEventThrottle={16}
  >
    <View>
      <View
        style={
          Object {
            "marginRight": 10,
          }
        }
      >
        <View
          accessible={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#e0e0e0",
                },
                Object {
                  "borderRadius": 3,
                },
                Object {
                  "width": 168,
                },
                undefined,
                undefined,
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignContent": "center",
                    "alignItems": "center",
                    "backgroundColor": "#F5F5F6",
                    "justifyContent": "center",
                  },
                  Array [
                    Object {
                      "borderRadius": 3,
                    },
                    Object {
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ],
                ]
              }
            >
              <Image
                onLoad={[Function]}
                resizeMode="cover"
                source={
                  Object {
                    "uri": "https://picsum.photos/320/200?image=11",
                  }
                }
                style={
                  Array [
                    Object {
                      "borderRadius": 3,
                    },
                    Object {
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ]
                }
              />
              <ActivityIndicator
                animating={true}
                color="white"
                hidesWhenStopped={true}
                size="large"
                style={
                  Array [
                    Object {
                      "position": "absolute",
                    },
                    false,
                  ]
                }
              />
            </View>
            <View
              pointerEvents="none"
              style={
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "alignSelf": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "left": 0,
                  "padding": 10,
                  "position": "absolute",
                  "width": "100%",
                }
              }
            >
              <View>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#4a4a4a",
                        "fontFamily": undefined,
                        "fontWeight": "400",
                        "textAlignVertical": "center",
                      },
                      Object {
                        "fontFamily": undefined,
                        "fontSize": 32,
                        "fontWeight": "700",
                        "letterSpacing": -2,
                        "lineHeight": 34,
                      },
                      false,
                      Object {
                        "color": "#ffffff",
                        "textAlign": "center",
                      },
                    ]
                  }
                >
                  Title 0
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 3,
                  "bottom": 0,
                  "left": 0,
                  "overflow": "hidden",
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#ffffff",
                  "height": 0,
                  "opacity": 0,
                  "width": 0,
                  "zIndex": 0,
                }
              }
            />
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "marginRight": 10,
          }
        }
      >
        <View
          accessible={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#e0e0e0",
                },
                Object {
                  "borderRadius": 3,
                },
                Object {
                  "width": 168,
                },
                undefined,
                undefined,
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignContent": "center",
                    "alignItems": "center",
                    "backgroundColor": "#F5F5F6",
                    "justifyContent": "center",
                  },
                  Array [
                    Object {
                      "borderRadius": 3,
                    },
                    Object {
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ],
                ]
              }
            >
              <Image
                onLoad={[Function]}
                resizeMode="cover"
                source={
                  Object {
                    "uri": "https://picsum.photos/320/200?image=12",
                  }
                }
                style={
                  Array [
                    Object {
                      "borderRadius": 3,
                    },
                    Object {
                      "opacity": 0.8,
                    },
                    Object {
                      "width": 168,
                    },
                    Object {
                      "height": 190,
                    },
                    false,
                    undefined,
                  ]
                }
              />
              <ActivityIndicator
                animating={true}
                color="white"
                hidesWhenStopped={true}
                size="large"
                style={
                  Array [
                    Object {
                      "position": "absolute",
                    },
                    false,
                  ]
                }
              />
            </View>
            <View
              pointerEvents="none"
              style={
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "alignSelf": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "left": 0,
                  "padding": 10,
                  "position": "absolute",
                  "width": "100%",
                }
              }
            >
              <View>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#4a4a4a",
                        "fontFamily": undefined,
                        "fontWeight": "400",
                        "textAlignVertical": "center",
                      },
                      Object {
                        "fontFamily": undefined,
                        "fontSize": 32,
                        "fontWeight": "700",
                        "letterSpacing": -2,
                        "lineHeight": 34,
                      },
                      false,
                      Object {
                        "color": "#ffffff",
                        "textAlign": "center",
                      },
                    ]
                  }
                >
                  Title 1
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 3,
                  "bottom": 0,
                  "left": 0,
                  "overflow": "hidden",
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#ffffff",
                  "height": 0,
                  "opacity": 0,
                  "width": 0,
                  "zIndex": 0,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {title} 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "marginBottom": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      bold={true}
      ellipsizeMode="tail"
      large={true}
      style={
        Array [
          Object {
            "color": "#4a4a4a",
            "fontFamily": undefined,
            "fontWeight": "400",
            "textAlignVertical": "center",
          },
          Object {
            "fontSize": 16,
            "lineHeight": 30,
          },
          false,
          Object {},
        ]
      }
    >
      Hello World
    </Text>
  </View>
  <RCTScrollView
    horizontal={true}
    scrollEventThrottle={16}
  >
    <View />
  </RCTScrollView>
</View>
`;
